--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.ikss</groupId>
-    <artifactId>shrinker</artifactId>
+    <artifactId>shortener</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>shrinker</name>
-    <description>Demo project for Spring Boot</description>
+    <name>shortener</name>
+    <description>URL shortener service</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
