--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
     password:
     driverClassName: org.h2.Driver
 
-version: @project.version@
+version: '@project.version@'
 
 
 server:
   port: 80
-  redirectUri: http://shortn.er
+  redirectUri: http://localhost
