--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,7 @@ spring:
     password:
     driverClassName: org.h2.Driver
 
-version: '@project.version@'
-
-
 server:
-  port: 80
+  port: 8088
   redirectUri: http://localhost
+  apiUri: https://urlshortener8.docs.apiary.io
