--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,5 @@ spring:
 
 server:
   port: 8088
-  redirectUri: http://localhost
+  redirectUri: http://localhost:${server.port}
   apiUri: https://urlshortener8.docs.apiary.io
